# playwright-rust

./: Cargo.toml
.cargo/: config.toml
src/: api.rs  build.rs  imp.rs  lib.rs
src/api/: api_request.rs  api_request_context.rs  api_response.rs  artifact.rs  browser.rs  browser_context.rs  cdp_session.rs  dialog.rs  frame.rs  locator.rs  page.rs  playwright.rs  route.rs  tracing.rs  web_error.rs  websocket_route.rs
src/imp/: api_request_context.rs  browser.rs  browser_context.rs  browser_type.rs  cdp_session.rs  dialog.rs  element_handle.rs  file_hooser.rs  frame.rs  page.rs  playwright.rs  request.rs  response.rs  route.rs  selectors.rs  stream.rs  tracing.rs  utils.rs  web_error.rs  websocket.rs  websocket_route.rs
src/imp/core/: connection.rs  driver.rs  message.rs  remote_object.rs  transport.rs
tests/: frame_locator.rs  get_by_selectors.rs  hello.rs  hello_chrome.rs
tests/page/: mod.rs
tests/server/: beforeunload.html
