[package]
name = "playwright"
version = "0.0.21"
authors = ["octaltree <octaltree@gmail.com>"]
description = "Playwright port to Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/playwright/"
repository = "https://github.com/octaltree/playwright-rust"
categories = ["web-programming"]
keywords = ["testing", "headless", "web", "browser", "automation"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "6.0"
thiserror = "2.0"
strong = { version = "0.3", features = ["serde", "shorthand"] }
tokio = { version = "1.48", features = ["sync", "rt-multi-thread", "macros"] }
actix-rt = { version = "2.11", optional = true }
async-std = { version = "1.13", features = ["attributes"], optional = true }
dirs = "6.0.0"
paste = "1.0"
base64 = "0.22"
itertools = "0.14"
chrono = { version = "0.4", optional = true, features = ["serde"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
serde_with = { version = "3.16", default-features = false, features = ["macros"] }
regex = "1.12"

[dev-dependencies]
env_logger = "0.11"
tempdir = "0.3"
tide = "0.16"
warp = "0.3"

[features]
default = ["chrono", "rt-tokio"]
rt-tokio = []
rt-actix = ["actix-rt"]
rt-async-std = ["async-std"]
only-for-docs-rs = []

[package.metadata.docs.rs]
features = ["only-for-docs-rs"]
